--- a/package.json
+++ b/package.json
@@ -6,17 +6,18 @@
     "test": "jest"
   },
   "dependencies": {
-    "apollo-datasource": "^0.1.3",
-    "apollo-datasource-rest": "^0.1.5",
+    "apollo-datasource": "latest",
+    "apollo-datasource-rest": "latest",
     "apollo-engine": "latest",
-    "apollo-server": "^2",
+    "apollo-server": "latest",
     "dotenv": "^5.0.1",
-    "graphql": "^0.13.2",
+    "graphql": "latest",
     "isemail": "^3.1.2",
     "sequelize": "^4.37.6",
-    "sqlite3": "^4.0.0"
+    "sqlite3": "^4.0.2"
   },
   "devDependencies": {
-    "jest": "^23.6.0"
+    "jest": "^23.6.0",
+    "nodemon": "^1.18.4"
   }
 }
